[tool.poetry]
name = "passwordgeneratorwithtkinter"
version = "0.1.0"
description = ""
authors = ["Ilya <121868806+Lio-Kay@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
customtkinter = "^5.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
