[tool.poetry]
name = "passwordgeneratorwithtkinter"
version = "0.1.0"
description = ""
authors = ["Ilya <121868806+Lio-Kay@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
screeninfo = "^0.8.1"
ttkbootstrap = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
